--- a/processors/processor-comparison-tool.html
+++ b/processors/processor-comparison-tool.html
@@ -94,7 +94,7 @@
     <!-- Navigation -->
     <nav class="bg-white shadow">
         <div class="container mx-auto px-4 py-2 flex justify-between items-center">
-            <h1 class="text-xl font-bold">Processor Architecture Comparison Tool</h1>
+            <h1 class="text-xl font-bold">Unofficial Processor Architecture Comparison Tool</h1>
             <div class="flex space-x-4">
                 <a href="#processor-comparison" class="py-2 px-3 text-gray-700 hover:text-blue-600">Processor
                     Comparison</a>
@@ -103,6 +103,9 @@
                 <a href="#architecture-comparison" class="py-2 px-3 text-gray-700 hover:text-blue-600">Architecture
                     Comparison</a>
                 <a href="#about" class="py-2 px-3 text-gray-700 hover:text-blue-600">About</a>
+                <a href="https://www.linkedin.com/in/gregoriomomm/" class="py-2 px-3 text-gray-700 hover:text-blue-600">Gregorio Momm (Greg)</a>
+
+
             </div>
         </div>
     </nav>
@@ -770,6 +773,16 @@
                         <li>HP Sizing Mainframe Workloads research paper</li>
                     </ul>
                 </div>
+                <div>
+                    <h3 class="text-xl font-semibold mb-2">Data Sources</h3>
+                    <p class="mb-3">Auhtor:</p>
+                    <ul class="list-disc list-inside">
+                        <li>Gregorio Momm (Greg)</li>
+                        <li>gregoriomomm@gmail.com</li>
+                        <li>https://www.linkedin.com/in/gregoriomomm/</li>
+                    </ul>
+                </div>
+
             </div>
         </section>
     </main>
