--- a/processors/enhanced-comparison.html
+++ b/processors/enhanced-comparison.html
@@ -187,6 +187,16 @@
             visibility: visible;
             opacity: 1;
         }
+        /* High-specificity rule to ensure it overrides other styles */
+        body #loading-overlay.hidden {
+            display: none !important;
+        }
+          
+        /* Alternative approach - use a different class name entirely */
+        .truly-hidden {
+            display: none !important;
+        }
+
     </style>
 </head>
 
